@@ -1,3 +1,9 @@
+2002-08-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* MessageLogger.py: New module.
+
+	* Defaults.py (LOGFILE_OUTGOING): New variable.
+
 2002-08-07  Tim Legant  <tim@catseye.net>
 
 	* FilterParser.py (_FilterFile): New class to hold per-file data.
